allow user to add feeds

--- a/rails_root/Gemfile
+++ b/rails_root/Gemfile
@@ -24,7 +24,7 @@ gem 'devise'
 # put test-only gems in this group so their generators
 # and rake tasks are available in development mode:
 group :development do
-  gem "mongrel"
+  gem 'mongrel'
   gem 'rspec'
   gem 'rspec-rails'
   # gem 'cucumber-rails'
