--- a/rails_root/Gemfile
+++ b/rails_root/Gemfile
@@ -19,6 +19,10 @@ gem 'sqlite3-ruby', '1.2.5'
 
 # Bundle the extra gems:
 gem 'devise'
+gem 'json'
+gem 'oauth', '0.4.4'
+gem "oauth-plugin", ">=0.4.0.pre5"
+
 
 # Bundle gems for the local environment. Make sure to
 # put test-only gems in this group so their generators
