--- a/rails_root/Gemfile
+++ b/rails_root/Gemfile
@@ -22,6 +22,7 @@ gem 'devise'
 gem 'json'
 gem 'oauth', '0.4.4'
 gem "oauth-plugin", ">=0.4.0.pre5"
+gem 'hpricot'
 
 
 # Bundle gems for the local environment. Make sure to
